@@ -1,0 +1,41 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-dublincore/Attic/zope-dublincore-3.8.2.ebuild,v 1.1 2011/02/19 17:56:45 arfrever Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="3.* *-jython"
+
+inherit distutils
+
+MY_PN="${PN/-/.}"
+MY_P="${MY_PN}-${PV}"
+
+DESCRIPTION="Zope Dublin Core implementation"
+HOMEPAGE="http://pypi.python.org/pypi/zope.dublincore"
+SRC_URI="mirror://pypi/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
+
+LICENSE="ZPL"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ppc ~sparc"
+IUSE=""
+
+RDEPEND="dev-python/pytz
+	net-zope/zope-annotation
+	net-zope/zope-component
+	net-zope/zope-datetime
+	net-zope/zope-event
+	net-zope/zope-i18nmessageid
+	net-zope/zope-interface
+	net-zope/zope-lifecycleevent
+	net-zope/zope-location
+	net-zope/zope-schema
+	net-zope/zope-security"
+DEPEND="${RDEPEND}
+	dev-python/setuptools"
+
+S="${WORKDIR}/${MY_P}"
+
+DOCS="CHANGES.txt README.txt"
+PYTHON_MODNAME="${PN/-//}"
