@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope-dublincore
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-dublincore/Attic/ChangeLog,v 1.8 2010/12/19 17:11:10 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-dublincore/Attic/ChangeLog,v 1.9 2011/02/19 17:56:45 arfrever Exp $
+
+*zope-dublincore-3.8.2 (19 Feb 2011)
+
+  19 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-dublincore-3.8.1.ebuild, +zope-dublincore-3.8.2.ebuild:
+  Version bump.
 
 *zope-dublincore-3.8.1 (19 Dec 2010)
 
